test bug about collage gap 2

--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -570,7 +570,7 @@
     .aboutCollage
         display: flex
         flex-wrap: wrap
-        gap: 12px
+        margin: 0 12px
 
         .B1, .B5, .B6
             display: none
